examples/test/testpolicy10022.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10022
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key49: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value40
      podSelector:
        matchLabels:
          key31: value3
          key5: value48
          key3: value20
